[gd_scene format=3 uid="uid://b8o85g2sio284"]

[ext_resource type="Script" uid="uid://cfab8014h0v8n" path="res://Scene/Papel/papel.gd" id="1_p8iyx"]
[ext_resource type="Texture2D" uid="uid://wiebtywkreb5" path="res://Assets/Papel/Papel_animacao/papel1.png" id="2_7yn5b"]
[ext_resource type="Texture2D" uid="uid://chitfcfvmbgmq" path="res://Assets/Papel/papel_auio/ae_oul1.png" id="2_t8r5d"]
[ext_resource type="Texture2D" uid="uid://u2j7pvnlso5i" path="res://Assets/Papel/Papel_animacao/papel2.png" id="3_5086u"]
[ext_resource type="Texture2D" uid="uid://bjsvt287xt8bu" path="res://Assets/Papel/papel_auio/ae_oul2.png" id="3_a4la2"]
[ext_resource type="Texture2D" uid="uid://ddtxs7rr0va1v" path="res://Assets/Papel/papel_auio/ae_oul3.png" id="4_2hgqp"]
[ext_resource type="Texture2D" uid="uid://c2k4qhnjpc18q" path="res://Assets/Papel/Papel_animacao/papel3.png" id="4_4vruu"]
[ext_resource type="Texture2D" uid="uid://dssaxe537ylw2" path="res://Assets/Papel/papel_auternativo_1/papel_variantel1.png" id="5_e8wym"]
[ext_resource type="Texture2D" uid="uid://dcsmivfexbciu" path="res://Assets/Papel/papel_auternativo_1/papel_variantel2.png" id="6_ajbfy"]
[ext_resource type="Texture2D" uid="uid://cifo3hured2vb" path="res://Assets/Papel/papel_auternativo_1/papel_variantel3.png" id="7_la47y"]
[ext_resource type="Texture2D" uid="uid://lvsjd0urcw4" path="res://Assets/Papel/Papel_gatinho/papel_gatinhol1.png" id="8_ansx7"]
[ext_resource type="Texture2D" uid="uid://2m2eiidrj4u" path="res://Assets/Papel/Papel_gatinho/papel_gatinhol2.png" id="9_8vefl"]
[ext_resource type="Texture2D" uid="uid://bgmmtg0kh3m71" path="res://Assets/Papel/Papel_gatinho/papel_gatinhol3.png" id="10_vlm4x"]
[ext_resource type="Texture2D" uid="uid://dqb76wos74d4a" path="res://Assets/Papel/Papel_undertale/undetale_paper1.png" id="11_0dnjd"]
[ext_resource type="Texture2D" uid="uid://b21lw3u6vgjho" path="res://Assets/Papel/Papel_undertale/undetale_paper2.png" id="12_4si14"]
[ext_resource type="Texture2D" uid="uid://cfo4r7lcisfyx" path="res://Assets/Papel/Papel_undertale/undetale_paper3.png" id="13_grfs0"]
[ext_resource type="Texture2D" uid="uid://om1qg4vgu3t3" path="res://Assets/Papel/papel_uwu/uwu1.png" id="14_ma0it"]
[ext_resource type="Texture2D" uid="uid://m8uu355etmh5" path="res://Assets/Papel/papel_uwu/uwu2.png" id="15_06db0"]
[ext_resource type="Texture2D" uid="uid://c170d66kmrkqq" path="res://Assets/Papel/papel_uwu/uwu3.png" id="16_mm7te"]
[ext_resource type="Texture2D" uid="uid://dua1b8i5c3pti" path="res://Assets/Papel/papel_animacao_1/folha_reta1.png" id="20_j5agv"]
[ext_resource type="Texture2D" uid="uid://c8rbk4bu7nbh6" path="res://Assets/Papel/papel_animacao_1/folha_reta2.png" id="21_nma1o"]
[ext_resource type="Texture2D" uid="uid://d2ymjuseb528a" path="res://Assets/Papel/papel_animacao_1/folha_reta3.png" id="22_5cb1x"]

[sub_resource type="SpriteFrames" id="SpriteFrames_t8r5d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_t8r5d")
}, {
"duration": 1.0,
"texture": ExtResource("3_a4la2")
}, {
"duration": 1.0,
"texture": ExtResource("4_2hgqp")
}],
"loop": true,
"name": &"carimbado_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_e8wym")
}, {
"duration": 1.0,
"texture": ExtResource("6_ajbfy")
}, {
"duration": 1.0,
"texture": ExtResource("7_la47y")
}],
"loop": true,
"name": &"carimbado_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ansx7")
}, {
"duration": 1.0,
"texture": ExtResource("9_8vefl")
}, {
"duration": 1.0,
"texture": ExtResource("10_vlm4x")
}],
"loop": true,
"name": &"carimbado_3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_0dnjd")
}, {
"duration": 1.0,
"texture": ExtResource("12_4si14")
}, {
"duration": 1.0,
"texture": ExtResource("13_grfs0")
}],
"loop": true,
"name": &"carimbado_4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_ma0it")
}, {
"duration": 1.0,
"texture": ExtResource("15_06db0")
}, {
"duration": 1.0,
"texture": ExtResource("16_mm7te")
}],
"loop": true,
"name": &"carimbado_5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7yn5b")
}, {
"duration": 1.0,
"texture": ExtResource("3_5086u")
}, {
"duration": 1.0,
"texture": ExtResource("4_4vruu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_j5agv")
}, {
"duration": 1.0,
"texture": ExtResource("21_nma1o")
}, {
"duration": 1.0,
"texture": ExtResource("22_5cb1x")
}],
"loop": true,
"name": &"default_1",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p8iyx"]
radius = 42.198944
height = 97.6157

[node name="Papel" type="Node2D" unique_id=1230539461 groups=["Papel"]]
light_mask = 2
script = ExtResource("1_p8iyx")

[node name="AnimationSprite" type="AnimatedSprite2D" parent="." unique_id=576327277]
sprite_frames = SubResource("SpriteFrames_t8r5d")
animation = &"default_1"
autoplay = "default"

[node name="Area2D" type="Area2D" parent="." unique_id=394455269 groups=["Papel"]]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=1667779726]
light_mask = 3
visibility_layer = 3
position = Vector2(4, 2)
rotation = 0.64584994
shape = SubResource("CapsuleShape2D_p8iyx")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
